# disentanglement

./: .gitignore  README.md  pyproject.toml  requirements.txt  script_train_dmelodies_rnn.py  train_baseline.py  train_transformer.py
src/dmelodiesvae/: dmelodies_vae.py  dmelodies_vae_trainer.py  dmelodies_vae_trainer_transformer.py  dmelodies_vae_transformer.py  encoder_transformer.py  factor_vae_trainer.py
src/utils/: model.py
