[tool.poetry]
name = "dmelodies"
version = "0.1.0"
description = ""
authors = ["Andreas Bjerregaard <andbje@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.7.15"
torch = "^1.13.0"
numpy = "1.21.6"
notebook = "6.5.2"
pandas = "1.3.5"
tqdm = "4.64.1"
music21 = "7.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
